<resources>
    <string name="app_name">Bin Movie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="upload">Upload</string>
    <string name="select_and_upload">Select and Upload</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="longitude">Longitude: %1$s</string>
    <string name="your_current_location">Your current location</string>
    <string name="hint_search">Try \'Spiderman\'</string>
    <string name="movie_desc">Eighteen months after outwitting the FBI, the fugitive Four Horsemen – J. Daniel Atlas, Merritt McKinney, Jack Wilder, and new member Lula May – await orders from the Eye, the secret society of magicians. The Horsemen’s handler, FBI Special Agent Dylan Rhodes, delivers their instructions: the Horsemen are to expose corrupt tech CEO Owen Case, whose latest cell phone will secretly collect users’ personal data to sell on the black market. In New York City, the Horsemen hijack the phone’s launch, but are interrupted by a mysterious figure who reveals to the public that Jack faked his death, and that Dylan is working with the Horsemen. Dylan eludes the FBI as the Horsemen escape down a construction chute only to find themselves in Macau.</string>
</resources>