<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bin.movie.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bin.movie.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bin.movie.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.bin.movie.ui.location.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.bin.movie.ui.upload.UploadFragment"
        android:label="@string/upload"
        tools:layout="@layout/fragment_upload" />
</navigation>